--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
