--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
+  "keywords": [
+    "example",
+    "heroku"
+  ], 
   "author": "Edwar López",
   "license": "ISC",
   "dependencies": {
@@ -18,6 +22,11 @@
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19"
   },
+
+  "engines": {
+    "node": "14.x"
+  },
+
   "devDependencies": {
     "gh-pages": "^4.0.0"
   }
