--- a/package.json
+++ b/package.json
@@ -10,23 +10,22 @@
   "keywords": [
     "example",
     "heroku"
-  ], 
+  ],
   "author": "Edwar López",
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "heroku": "^7.62.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19"
   },
-
   "engines": {
     "node": "14.x"
   },
-
   "devDependencies": {
     "gh-pages": "^4.0.0"
   }
